# stripe-app

./: .dockerignore  .env.example  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
stripe_app/: admin.py  settings.py  urls.py  views.py
stripe_app/items/: apps.py  models.py  urls.py  views.py
stripe_app/items/migrations/: 0001_initial.py
stripe_app/migrations/: 0001_initial.py  0002_order_itemorder.py  0003_discount_order_discount.py  0004_tax_alter_order_discount_order_tax.py  0005_item_currency.py  0006_remove_itemorder_item_remove_itemorder_order_and_more.py
stripe_app/orders/: apps.py  models.py  urls.py  views.py
stripe_app/orders/migrations/: 0001_initial.py
stripe_app/templates/: base.html  index.html
stripe_app/templates/items/: buy-item-intent.html  buy-item.html  items.html
stripe_app/templates/orders/: buy-order copy.html  buy-order.html  orders.html
stripe_app/tests/: test_models.py  test_views.py
stripe_app/tests/fixtures/: items.json
