[tool.poetry]
name = "stripe-app"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
python-dotenv = "^0.21.0"
Django = "^4.1.3"
stripe = "^5.0.0"
django-bootstrap5 = "^22.1"
django-bootstrap-v5 = "^1.0.11"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
